<resources>
    <string name="app_name">Dinnerly</string>
    <!-- Button Strings -->
    <string name="btn_begin">Start</string>
    <string name="btn_custom">Custom</string>
    <string name="btn_random">Randomize</string>
    <string name="btn_byCustom">Choose Custom</string>
    <string name="btn_byCategories">Choose Categories</string>
    <!-- Titles for Fragments -->
    <string name="title_type">Type</string>
    <string name="title_custom">Custom</string>
    <string name="title_wheel">Spinning</string>
    <string name="title_categories">Categories</string>
    <string name="detail_custom">Number of categories:</string>
    <string name="test_category">Empty Category!</string>
    <!-- Dialog Box Strings -->
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="upgrade">Upgrade</string>
    <string name="title_internet">Oops!</string>
    <string name="detail_internet">Something went wrong. Please check your internet connection</string>
    <string name="detail_ads">Ads help support us to create more to help you! If you wish to
    remove ads you can upgrade to the ad free version.</string>
    <string name="detail_info">Creator: Michael McComas. \n\n Dinnerly is the app to solve all
        your indecisive dinner decision needs! You can select options to choose between in our
        category list and the app will decide which place to go and display places that fit near
        you.</string>
    <string name="detail_feedback">If you have any questions or concerns please do not hesitate to
        leave a review on the Google Play store. We will get back to you as soon as possible!</string>
    <string name="detail_categories">The categories listed below are some of the most common types
        of restaurants. \n\nSelect a minimum of two categories and click the randomize button.
        The app will then select one of the selected categories at random and display places that
        fit near you. \n\n You can view descriptions of the categories by selecting the arrow beside
        the category name.</string>
    <string name="detail_manual">Manual</string>
    <string name="detail_automatic">Automatic</string>
    <!-- Toast Messages -->
    <string name="msg_Dark_On">Dark Mode On</string>
    <string name="msg_Dark_Off">Dark Mode Off</string>
    <string name="msg_custom_error">All categories must be filled</string>
    <string name="msg_Categories">Please select at least two categories</string>
    <string name="msg_choice_error">An error occurred. Please check your internet connection and try
        again</string>
    <!-- Decision Fragment Strings -->
    <string name="title_decided">Blank It Is!</string>
    <string name="title_places">Here are some places near you!</string>
    <string name="btn_again">Pick Again</string>
    <!-- Settings Strings -->
    <string name="title_settings">Settings</string>
    <string name="title_dark">Dark Mode</string>
    <string name="title_ads">Ads</string>
    <string name="title_info">About</string>
    <string name="title_feedback">Feedback</string>
    <string name="AppVersion">App Version: 1.0.0</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_choice">Enter a choice</string>
</resources>