<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_height="match_parent"
    tools:context=".ui.Settings">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_settings"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/txt_appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/AppVersion"
            android:textSize="15sp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <Button
            android:id="@+id/btn_dark"
            android:background="@null"
            android:text="@string/title_dark"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_sun"
            android:drawableStart="@drawable/ic_sun"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_settings"/>
        <Button
            android:id="@+id/btn_language"
            android:background="@null"
            android:text="@string/title_language"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_earth"
            android:drawableStart="@drawable/ic_earth"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dark"/>
        <Button
            android:id="@+id/btn_info"
            android:background="@null"
            android:text="@string/title_info"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_info"
            android:drawableStart="@drawable/ic_info"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_language"/>
        <Button
            android:id="@+id/btn_feedback"
            android:background="@null"
            android:text="@string/title_feedback"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_feedback"
            android:drawableStart="@drawable/ic_feedback"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_info"/>

        <Switch
            android:id="@+id/switch_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_settings"
            app:layout_constraintLeft_toRightOf="@id/btn_dark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>