<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="300dp"
    app:cardCornerRadius="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/copy"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/txt_dialog_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/title_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/txt_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/detail_ads"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title"/>

            <Button
                android:id="@+id/btn_upgrade"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:translationZ="5dp"
                android:background="@drawable/btn_state"
                android:text="@string/upgrade"
                android:textColor="@color/btn_txt_color"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btn_Cancel"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog"/>
            <Button
                android:id="@+id/btn_Cancel"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:translationZ="5dp"
                android:background="@drawable/btn_state"
                android:text="@string/cancel"
                android:textColor="@color/btn_txt_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_upgrade"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>