<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/copy"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">
            <TextView
                android:id="@+id/txt_dialog_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/title_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/txt_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/detail_manual"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="60dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="80dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title"
                app:layout_constraintLeft_toRightOf="@id/txt_manual"/>
            <TextView
                android:id="@+id/txt_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/detail_automatic"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="60dp"
                android:textAlignment="center"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_manual"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="80dp"
                app:layout_constraintTop_toBottomOf="@+id/switch_manual"
                app:layout_constraintLeft_toRightOf="@+id/txt_manual"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:translationZ="5dp"
                android:background="@drawable/btn_state"
                android:text="@string/cancel"
                android:textColor="@color/btn_txt_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_update"
                app:layout_constraintTop_toBottomOf="@+id/txt_automatic"/>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:translationZ="5dp"
                android:background="@drawable/btn_state"
                android:text="@string/update"
                android:textColor="@color/btn_txt_color"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@+id/txt_automatic"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>