<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary"
    tools:context=".ui.CustomCategories">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/title_custom"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/txt_enter"
            android:textSize="20sp"
            android:text="@string/detail_custom"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtxt_number"
            android:layout_width="50dp"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:maxLength="1"
            android:gravity="center"
            android:background="@drawable/txtbx_outline"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="15dp"
            app:layout_constraintLeft_toRightOf="@+id/txt_enter"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />
        <Button
            android:id="@+id/btn_random"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/btn_random"
            android:translationZ="5dp"
            android:textColor="@color/btn_txt_color"
            android:background="@drawable/btn_state"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_custom"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_enter"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>